added additional structs
